Fix small font on mobile

--- a/src/components/Chat/ChatInput.scss
+++ b/src/components/Chat/ChatInput.scss
@@ -38,6 +38,7 @@
                 margin-bottom: -3px;
                 background-color: var(--chatInputColor);
                 color: var(--text);
+                font-size: 1em;
 
                 padding: 0.5em 1em 0.5em 0.5em;
 
